# AttentionIsAllYouNeed

./: .gitignore
SelfAttention/: Makefile  model.pt  nohup.out  pyproject.toml
SelfAttention/lightning_logs/version_2/: metrics.csv
SelfAttention/src/: dataset.py  main.py  model.py  trainer.py
Vit/: Paper Replication.ipynb  README.md  pyproject.toml
Vit/going_modular/: data_setup.py  engine.py  model_builder.py  train.py  utils.py
src/: arguments.py  train.py
transformer/: .gitignore  Makefile  pyproject.toml
transformer/src/: dataset.py  model.py  tokenize.py  train.py  trainer.py
