[project]
name = "vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.3",
    "onnxscript>=0.6.2",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
