[project]
name = "attentionisallyouneed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataset>=2.0.0",
    "datasets>=4.4.2",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "lightning>=2.6.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tokenizer>=3.6.2",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "wandb>=0.26.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff>=0.14.10",
]
